# stellar-trust-escrow

./: Cargo.toml  lintstagedrc  package-lock.json  package.json
.husky/: pre-commit.sh  pre-push.sh
backend/: .env.example  openapi.yaml  package.json  server.js
backend/api/controllers/: eventController.js
backend/api/routes/: disputeRoutes.js  escrowRoutes.js  kycRoutes.js  notificationRoutes.js  reputationRoutes.js  (+1 more)
backend/lib/: metrics.js  sentry.js
backend/middleware/: compression.js
backend/services/: emailService.js  eventIndexer.js  kycService.js  stellarService.js
backend/tests/: compression.test.js  emailService.test.js  reputationService.test.js
contracts/insurance_contract/: Cargo.toml
contracts/insurance_contract/src/: errors.rs  events.rs  lib.rs  types.rs
contracts/insurance_contract/test_snapshots/tests/: test_add_remove_governor.1.json  test_contribute_below_minimum_fails.1.json  test_contribute_transfers_tokens.1.json  test_double_initialize_fails.1.json  test_double_vote_fails.1.json  test_execute_payout_transfers_tokens.1.json  test_initialize_stores_params.1.json  test_payout_insufficient_funds_fails.1.json  test_submit_claim_exceeds_cap_fails.1.json  test_submit_claim_returns_id.1.json  test_vote_approves_at_quorum.1.json  test_vote_rejects_when_against_wins.1.json  test_withdraw_claim.1.json
docs/: smart-contract-guide.md
frontend/: .env.example  next.config.js  package.json  sentry.client.config.js  sentry.edge.config.js  sentry.server.config.js
frontend/app/: global-error.jsx
frontend/lib/: sentry.js  sentryUser.js
(+4 files in other folders)
